# asistentes

./: .gitignore  main.py  pyproject.toml
Asistentes/asst_8PeFyhsgpAv4Rz9y1S5wLkO7/: config.json  prompt.md
Asistentes/asst_n6Gf4NYfgyhVYhi3IZetcQBP/: config.json  prompt.md
src/: assistants.py  config.py  functions.py  loggers.py  paths.py
