[project]
name = "proyectos"
version = "0.1.0"
description = ""
authors = [
    {name = "Jinerson",email = "jinerson.p.w10@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai (>=2.7.1,<3.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"